testsuite/poke.pkl/map-diag-7.pk
/* { dg-do compile } */

type Foo = struct { int i; struct { any[] a; } s; };

Foo @ 0#B; /* { dg-error "" } */
